--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
 .todo-card{
 
     border: 3px solid crimson;
+    background-color:  #808D8E;
     display: flex;
     flex-direction: column;
     padding: 4px;
